remove solid border of LoginForm to avoid white space, add border radius

--- a/src/components/LoginForm/LoginForm.css
+++ b/src/components/LoginForm/LoginForm.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 
 .LoginForm {
-    border: solid 1.2px;
+    border-radius: 4px;
     background: white;
     opacity: 0.94;
     width: 320px;
@@ -13,6 +13,7 @@
 /* format title */
 .LoginForm h2 {
     background: rgb(255, 0, 140);
+    border-radius: 4px 4px 0px 0px;
     color: white;
     width: 100%;
     height: 2em;
